# sketchbook

./: Cargo.toml
src/: accelerator.rs  color.rs  error.rs  geometry.rs  image.rs  integrator.rs  io.rs  main.rs  material.rs  math.rs  random.rs  scene.rs  shape.rs
src/accelerator/: kd.rs  linear.rs
src/geometry/: sphere.rs
src/integrator/: path_tracer.rs  primary_ray.rs
src/io/: hdr.rs
src/math/: aabb.rs  axis.rs  functions.rs  plane.rs  vector.rs
src/shape/: plane.rs  sphere.rs  triangle.rs
