[package]
name = "sketchbook"
version = "0.1.0"
authors = ["weqqr <weqqr@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.0"
thiserror = "1.0.11"
rand = "0.7.3"
rand_pcg = "0.2.1"
rand_distr = "0.2.2"
